2013-07-14  Peter Bloomfield

	Fix bgo #704159 (Igor Pashev)

	* configure.ac: add check for struct utsname.domainname, and
	AC_USE_SYSTEM_EXTENSIONS.
	* libbalsa/filter-file.c: do not define __EXTENSIONS__.
	* libbalsa/send.c (libbalsa_set_message_id): check
	HAVE_STRUCT_UTSNAME_DOMAINNAME as well as _GNU_SOURCE.

2013-02-14  Pawel Salek

	* NEWS, configure.in: release balsa-2.4.14 buildable on fedora rawhide.
	* libbalsa/imap-server.c:
	* libbalsa/libbalsa-conf.c: replace deprecacted gthreads API.
	* libbalsa/mime-stream-shared.c: 
	* src/main.c: ditto.

2012-10-29  Pawel Salek

	* NEWS, configure.in: release balsa-2.4.13

2012-10-22  Pawel Salek

	* libbalsa/imap/pop3.c: fix long-line POP3 bug reported by Rob Landley.

2012-09-17  Peter Bloomfield

	Fix bgo #684124

	* libinit_balsa/assistant_page_defclient.c
	(balsa_druid_page_defclient_init): capitalize "Balsa".
	* src/balsa-mime-widget-callbacks.c
	(balsa_mime_widget_ctx_menu_save): capitalize "URI".
	* src/filter-edit-dialog.c (filters_edit_dialog): space after
	".".

2012-05-21  Peter Bloomfield

	* libbalsa/imap/md5-utils.c (md5_final): avoid gcc whining.

2012-04-21  Pawel Salek

	* NEWS, configure.in: release balsa-2.4.12

2012-02-08  Albrecht Dreß

	* libbalsa/gmime-part-rfc2440.c (g_mime_part_rfc2440_verify):
	check for empty return from GpgME.

2012-02-03  Peter Bloomfield

	* configure.in: remove obsolete BUILD_WITH_GNOME.

2011-12-20  Peter Bloomfield

	* configure.in: use git tag to set version.

2011-12-20  Peter Bloomfield

	* Makefile.am: drop GNOME_Balsa.server.in from balsa_extra_dist.

2011-12-20  Peter Bloomfield

	* .gitignore: add .libs.

2011-12-20  Albrecht Dreß

	* libbalsa/rfc3156.c: suppress GLib warning when the message is
	only encrypted; return 'no error' for encrypted-only RFC 2440
	messages; re-wrap a few over-long lines
	* src/balsa-message.c: properly pick up return values from
	libbalsa
	* src/balsa-mime-widget-crypto.[hc]: changes needed for drawing
	encrypted-only frame